<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_margin="20dp"
        android:contentDescription="@string/back_button"
        app:fabSize="auto"
        app:srcCompat="@drawable/left_arrow"
        android:backgroundTint="@color/white"
        app:borderWidth="0dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:background="@drawable/floor_box"
        android:elevation="5dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/second_floor"
            android:layout_width="@dimen/floor_button_size"
            android:layout_height="@dimen/floor_button_size"
            android:layout_marginVertical="5dp"
            android:background="@drawable/circle_button"
            android:elevation="0dp"
            android:stateListAnimator="@null"
            android:text="@string/_2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/first_floor"
            android:layout_width="@dimen/floor_button_size"
            android:layout_height="@dimen/floor_button_size"
            android:layout_marginVertical="5dp"
            android:background="@drawable/active_circle_button"
            android:elevation="0dp"
            android:stateListAnimator="@null"
            android:text="@string/_1"
            android:textColor="@color/white"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="1dp" />
</FrameLayout>